--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ requires = ["uv_build>=0.8.5,<0.9.0"]
 build-backend = "uv_build"
 
 [tool.uv.build-backend]
-module-name = ["open-cli"]
+module-name = ["open_cli"]
 source-exclude = ["tests/**/*", "src/open_cli/deps/**/*"]
 
 [project.scripts]
